--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -12,12 +12,12 @@
   align-items: flex-start;
   padding-top: 80px;
   z-index: 9999;
-  backdrop-filter: blur(3px); /* keeps page visible but soft behind */
+  backdrop-filter: blur(5px); /* keeps page visible but soft behind */
   
 }
 
 .popup-container {
-  background-color: transparent;
+  background-color:rgba(0,0,0,0.3);
   color: #111;
   padding: 24px 36px;
   border-radius: 18px;
@@ -25,10 +25,12 @@
   max-width: 500px;
   width: 90%;
   text-align: center;
+  opacity:2;
   animation: fadeIn 0.5s ease;
   display: flex;
   flex-direction: column;
   align-items: center;
+  backdrop-filter:blur(5px);
 }
 
 .popup-title {
@@ -45,7 +47,7 @@
   font-weight: 600;
   color: #070552 ;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  text-align: center;
+  text-align: start;
 }
 
 .popup-close-btn {
