--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1788,7 +1788,7 @@ body {
   font-weight: 600;
   color: #0f02f5 ;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  text-align: center;
+  text-align: start;
 }
 
 .popup-close-btn {
