--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -87,6 +87,15 @@ body {
   margin-right: auto;
   
 }
+.dm{
+  color: black;
+  font-weight: 500;
+  text-align: left;
+  background: linear-gradient(45deg, #cedb1c, #79d8d8);
+  padding: 10px;
+  border-radius: 10px;
+  font-size:20px;
+}
 
 /* ======================================================= */
 /* HERO SECTION                                          */
