--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -95,6 +95,7 @@ body {
   padding: 10px;
   border-radius: 10px;
   font-size:20px;
+  margin-top:30px;
 }
 
 /* ======================================================= */
