--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -525,11 +525,12 @@ body {
 }
 
 .solution-card-img1 {
-  width: 100%;
-  height: 600px;
+  width: 300px;
+  height: 550px;
   border-top: 1px solid #e0e0e0;
   transition: transform 0.3s ease;
   border-radius: 20px;
+  object-fit:fill;
 }
 
 .solution-card-img1 {
