--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -294,7 +294,7 @@ body {
   transform: scale(1);
 
   /* Set the default (grayscale) image */
-  background-image: url('https://res.cloudinary.com/dgay8ba3o/image/upload/v1760079374/WhatsApp_Image_2025-10-10_at_11.40.02_AM_j9nm5z.jpg');
+  background-image: url('god.jpg');
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
