--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -525,7 +525,7 @@ body {
 }
 
 .solution-card-img1 {
-  width: 300px;
+  width: 100%;
   height: 550px;
   border-top: 1px solid #e0e0e0;
   transition: transform 0.3s ease;
