--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -758,7 +758,7 @@ body {
 /* ======================================================= */
 .footer-main1 {
   max-width: 800px;
-  margin: 10px auto;
+  margin: 10px 60px;
   border-radius: 20px;
   padding:0;
   background: #931616;
