--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1306,6 +1306,15 @@ body {
     margin-top: 10px;
   }
 
+  .solution-container{
+    padding: 20px 0 20px 0;
+    gap: 30px;
+  }
+
+  .solutions-section{
+    margin:0;
+  }
+
   .solutions-section h2 {
     font-size: 1.8em;
   }
