--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -984,7 +984,7 @@ body {
 
 
   .solution-card-img1 {
-  width: auto;
+  width: 100%;
   height: 100%;
   object-fit: cover;
   border-top: 1px solid #e0e0e0;
