--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1265,7 +1265,17 @@ body {
     padding-left: 16px;
     padding-right: 16px;
   }
-
+ .cutout-shape {
+        width: 100%;
+        height: 80%;
+        aspect-ratio: 1 / 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        mask-size: cover;
+        -webkit-mask-size: cover;
+        margin-right: 15px;
+    }
 
   .hero-section {
     padding: 30px 40px;
