--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -115,6 +115,9 @@ body {
   overflow: hidden;
   position: relative;
 }
+.money{
+  font-size:65px;
+}
 
 .hero-content {
   max-width: 600px;
@@ -155,6 +158,7 @@ body {
 
 .money {
   color: #817676;
+  
 }
 
 .hero-content h2 {
