--- a/src/components/family/Family.css
+++ b/src/components/family/Family.css
@@ -142,24 +142,29 @@ p {
 
 /* Process Section */
 .process {
-  padding: 4rem 8%;
+  margin-top: 20px;
 }
 
-.process h2 {
-  font-size: 20px;
-  margin-bottom: 1rem;
-  color: green;
-  border-radius: 8px;
-  font-size: 1.5rem;
-  font-weight: bold;
+.health-heading span{
+    background-color: darkgreen;
+    color: white;
+    display: inline-block;
+    line-height: 3.6rem;
+    font-size: 32px;
+    padding: 0 15px;
+    border-radius: 5px;
+}
+
+.grow{
+  margin-left: 60px;
 }
 
 .subtitle {
-  margin-bottom: 3rem;
+  margin-left: 60px;
   color: rgb(3, 3, 88);
   font-weight: bold;
   line-height: 1.6;
-  font-size: 23px;
+  font-size: 24px;
   text-align: start;
 }
 
@@ -192,6 +197,8 @@ p {
   object-fit: fill;
   transition: transform 0.5s ease;
   cursor: pointer;
+  margin-left: 60px;
+  margin-top: 20px;
 }
 
 /* Hover Zoom */
@@ -265,5 +272,5 @@ footer {
 }
 
 footer .btn {
-  margin: 1rem 0;
+  margin: 1rem 0;
 }
