--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -88,14 +88,14 @@ body {
   
 }
 .dm{
-  color: black;
-  font-weight: 500;
-  text-align: left;
-  background: linear-gradient(45deg, #cedb1c, #79d8d8);
-  padding: 10px;
-  border-radius: 12px;
-  font-size:20px;
-  margin-top:30px;
+    background: Linear-gradient(45deg, rgb(206,219,28), rgb(121,216,216));
+    color: black;
+    display: inline-block;
+    font-size: 32px;
+    padding: 0 15px;
+    border-radius: 5px;
+    margin-top: 30px;
+    margin-left: 50px;
 }
 
 /* ======================================================= */
@@ -139,7 +139,7 @@ body {
     width: 95%;
     margin-top: 20px;
   }
-  .dm p{
+  .dm span{
     font-size: 22px;
     text-align: start;
   }
