--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -91,7 +91,7 @@ body {
     background: Linear-gradient(45deg, rgb(206,219,28), rgb(121,216,216));
     color: black;
     display: inline-block;
-    font-size: 32px;
+    font-size: 24px;
     padding: 0 15px;
     border-radius: 5px;
     margin-top: 30px;
@@ -108,12 +108,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-height: 100vh;
+  min-height: 80vh;
   padding: 0px 30px 0px 60px;
   flex-wrap: wrap;
   gap: 40px;
   overflow: hidden;
   position: relative;
+  margin-left:60px;
 }
 .money{
   font-size:65px;
