--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -17,8 +17,8 @@
 }
 
 .popup-container {
-  background-color: rgba(0,0,0,0.3);
-  color: #111;
+  background-color: rgba(255,255,255,0.01);
+  border:4px solid white;
   padding: 24px 36px;
   border-radius: 18px;
   box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
@@ -36,7 +36,7 @@
 
 .popup-title {
   font-size: 1.8em;
-  color: #b71c1c;
+  color: #fc0000;
   font-weight: 600;
   margin-bottom: 10px;
 }
@@ -46,13 +46,13 @@
   margin-bottom: 20px;
   font-size: 25px;
   font-weight: 600;
-  color: #0f02f5 ;
+  color: navy ;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-align: start;
 }
 
 .popup-close-btn {
-  background: #b71c1c;
+  background: #fc0000;
   color: #fff;
   border: none;
   border-radius: 10px;
@@ -1803,71 +1803,7 @@ body {
 }
 
 
-/* ======================================================= */
-/* POPUP STYLES                                            */
-/* ======================================================= */
-.popup-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding-top: 80px;
-  z-index: 9999;
-  backdrop-filter: blur(3px); /* keeps page visible but soft behind */
-  
-}
 
-.popup-container {
-  background-color: rgba(0,0,0,0.3);
-  color: #111;
-  padding: 24px 36px;
-  border-radius: 18px;
-  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
-  max-width: 500px;
-  width: 90%;
-  text-align: center;
-  animation: fadeIn 0.5s ease;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-
-.popup-title {
-  font-size: 1.8em;
-  color: #b71c1c;
-  font-weight: 600;
-  margin-bottom: 10px;
-}
-
-.popup-text {
-  
-  margin-bottom: 20px;
-  font-size: 25px;
-  font-weight: 600;
-  color: #0f02f5 ;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  text-align: start;
-}
-
-.popup-close-btn {
-  background: #b71c1c;
-  color: #fff;
-  border: none;
-  border-radius: 10px;
-  padding: 10px 22px;
-  font-size: 1em;
-  cursor: pointer;
-  transition: background 0.2s ease;
-}
-
-.popup-close-btn:hover {
-  background: #a41414;
-}
 
 /* Fade-in animation */
 @keyframes fadeIn {
