--- a/src/components/health/Health.css
+++ b/src/components/health/Health.css
@@ -1,4 +1,3 @@
-
 /* ---------------- VARIABLES ---------------- */
 :root {
   --font-primary: 'Poppins', sans-serif;
@@ -45,14 +44,17 @@ img:hover { transform: scale(1.05); }
 
 .health-heading {
   text-align: left;
-  color: #002770;
-  font-style: italic;
   margin: 0 0 5px 60px;
-  padding-right: 20px;
-  font-size: 3em;
-  font-weight: 600;
 }
-
+.health-heading span{
+    background-color: darkgreen;
+    color: white;
+    display: inline-block;
+    line-height: 3.6rem;
+    font-size: 32px;
+    padding: 0 15px;
+    border-radius: 5px;
+}
 
 /* ---------------- HERO SECTION ---------------- */
 .hero {
