--- a/src/components/wealth/Wealth.css
+++ b/src/components/wealth/Wealth.css
@@ -1,10 +1,3 @@
-:root {
-  --bg: #f7f5f2;
-  --card: #ffffff;
-  --radius: 20px;
-  --container-w: 1100px;
-}
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -28,6 +21,26 @@ body {
   background: var(--bg);
   padding: 2rem 1rem;
 }
+
+.wealth-heading {
+  text-align: left;
+  margin-right: auto;
+  display: inline;
+  margin-bottom: 50px;
+  border-radius: 20px;
+  margin-top: 50px;
+}
+
+.wealth-heading span{
+    background-color: darkgreen;
+    color: white;
+    display: inline-block;
+    line-height: 3.6rem;
+    font-size: 32px;
+    padding: 0 15px;
+    border-radius: 5px;
+}
+
 
 /* Center page content on ultra-wide screens */
 @media (min-width: 1500px) {
