--- a/src/components/wealth/Wealth.css
+++ b/src/components/wealth/Wealth.css
@@ -108,8 +108,8 @@ body {
 
 .wealthy-portrait-card img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: 500px;
+  object-fit: fill;
 }
 
 /* ---------- Zigzag Section ---------- */
