--- a/src/components/income/Income.css
+++ b/src/components/income/Income.css
@@ -29,6 +29,7 @@ body{
   justify-content: space-between;
   padding: 60px 10%;
   gap: 50px;
+  margin-bottom:60px;
 }
 
 .income-section.reverse {
