--- a/src/components/wealth/Wealth.css
+++ b/src/components/wealth/Wealth.css
@@ -169,7 +169,7 @@ body {
 }
 
 .wealthy-text-col h2 {
-  font-size: 1.4rem;
+  font-size: 20px;
   color: var(--accent);
   margin-bottom: 0.8rem;
   text-align: start;
