--- a/src/components/overview/Overview.css
+++ b/src/components/overview/Overview.css
@@ -1,6 +1,8 @@
-/* Overview.css */
+*{
+  margin: 0;
+  padding: 0;
+}
 
-/* Global styles for this specific component, if needed */
 .overview-page-container {
   font-family: "Poppins", sans-serif;
   line-height: 1.6;
@@ -38,9 +40,9 @@
   background-image: linear-gradient(45deg, red, blue);
 }
 
-.zigzag-image-container {
-  padding: 20px; /* Use flexbox for better scaling */
-  text-align: left ; /* Center the image */
+.zigzag-image-container { /* Use flexbox for better scaling */
+  text-align: center; 
+  padding: 20px;/* Center the image */
 }
 
 .zigzag-image-container img {
@@ -63,11 +65,17 @@
   text-align: center;
 }
 
+.zigzag li{
+  font-size: 23px;
+  text-align: left;
+  line-height: 1.8;
+}
+
 .zigzag-text-content p,
 .zigzag-text-content ul {
-  font-size: 19px;
-  line-height: 2.2rem; /* Adjusted for readability */
-  text-align: justify;
+  font-size: 23px;
+  line-height: 1.8; /* Adjusted for readability */
+  text-align: left;
   font-weight: 500; /* Slightly reduced for better readability */
 }
 
