--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -96,6 +96,7 @@ body {
     border-radius: 15px;
     margin-top: 30px;
     margin-left: 50px;
+    font-weight:600;
 }
 
 /* ======================================================= */
