--- a/src/components/overview/Overview.css
+++ b/src/components/overview/Overview.css
@@ -19,7 +19,7 @@
 /* ============================= */
 .overview-header-title {
   margin-bottom: 40px;
-  text-align: center;
+  text-align: left;
 }
 
 .overview-header-title span {
